Fixed some navbar stuff.
The icons were too high, now they're centered better.

The navbar was not opening with the mobile version correctly. Now it is,
and when it is on the mobile version, it shows text along with the
icons.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,25 @@
   border-radius: 5px;
 }
 
+.navbar .octicon {
+  margin-top: 4px;
+}
+
+/* Normal navbar */
+@media (min-width: 768px) {
+  .icon-text {
+    display: none;
+  }
+}
+
+/* mobile navbar */
+@media (max-width: 767px) {
+  .icon-text {
+    display: inline;
+    margin-right: 10px;
+  }
+}
+
 .panel.panel-small {
   max-width: 50%;
 }
